# origin

./: .gitignore
06_multi_file_projects_and_libraries/Task_2/: Counter.cpp  main.cpp
06_multi_file_projects_and_libraries/Task_3/: equilateral_triangle.cpp  figure.h  isosceles_triangle.h  rhombus.h  right_triangle.cpp  square.h
07_preprocessor_and_macros/Task_2/: main.cpp
08_exceptions_and_error_handling/Task_2/: equilateral_triangle.cpp  equilateral_triangle.h  isosceles_triangle.cpp  parallelogram.h  quadrilateral.h
09_operator_overloading/Task_2/: main.cpp
10_cmake/Task_1/: CMakeLists.txt  main.cpp
10_cmake/Task_2/: CMakeLists.txt  isosceles_triangle.cpp  parallelogram.cpp  rectangle.cpp  right_triangle.h  square.cpp
11_build&connect_lib/Task_1/: Task_1.sln
11_build&connect_lib/Task_3/: CMakeLists.txt  leaver.h
11_build&connect_lib/Task_4/: Task_4.sln
11_build_connect_lib/Task_2/: Task_2.sln
11_build_connect_lib/Task_3/: CMakeLists.txt  leaver.cpp  main.cpp
11_build_connect_lib/Task_4/: Task_4.sln
11_build_connect_lib/Task_5/: CMakeLists.txt  equilateral_triangle.cpp  figure.cpp  geometricFigureDll.h  isosceles_triangle.cpp  main.cpp  quadrilateral.cpp  rhombus.cpp  right_triangle.cpp  square.cpp  triangle.cpp
12_unit_test/Task_1/: Task_1.sln
1_struct_and_enums/Task_1/: main.cpp
2_struct_and_enums/Task_2/: main.cpp
3_classes_and_objects/Task_2/: main.cpp
4_abstraction_and_encapsulation/Task_1/: main.cpp
4_inheritance_and_polymorphism/Task_1/: main.cpp
4_inheritance_and_polymorphism/Task_3/: main.cpp
5_inheritance_and_polymorphism/Task_2/: main.cpp
5_multi_file_projects_and_libraries/Task_3/: parallelogram.h  triangle.cpp
6_multi_file_projects_and_libraries/Task_1/: main.cpp  operations.cpp  operations.h
6_multi_file_projects_and_libraries/Task_2/: Counter.h
6_multi_file_projects_and_libraries/Task_3/: equilateral_triangle.h  figure.cpp  main.cpp  quadrilateral.cpp  rectangle.h  rhombus.cpp  triangle.h
7_exceptions_and_error_handling/Task_1/: main.cpp
7_exceptions_and_error_handling/Task_2/: error_creating_shape.cpp  error_creating_shape.h  rectangle.cpp  (+5 more)
racing_simulator/: CMakeLists.txt
racing_simulator/app/: CMakeLists.txt  main.cpp
racing_simulator/lib/: CMakeLists.txt
racing_simulator/lib/include/: AirRace.h  AirVehicle.h  Broomstick.h  Camel.h  Centaur.h  Eagle.h  FastCamel.h  GroundRace.h  GroundVehicle.h  MagicCarpet.h  MixedRace.h  Race.h  SkorokhodyBoots.h  Vehicle.h  utilsDll.h
racing_simulator/lib/src/: AirRace.cpp  AirVehicle.cpp  Broomstick.cpp  Camel.cpp  Centaur.cpp  Eagle.cpp  FastCamel.cpp  GroundRace.cpp  GroundVehicle.cpp  MagicCarpet.cpp  MixedRace.cpp  Race.cpp  SkorokhodyBoots.cpp  Vehicle.cpp  utilsDll.cpp
(+42 files in other folders)
