cmake_minimum_required(VERSION 3.8)
project(taks_2)
add_executable(figures main.cpp equilateral_triangle.cpp equilateral_triangle.h figure.cpp figure.h isosceles_triangle.cpp isosceles_triangle.h parallelogram.cpp parallelogram.h
quadrilateral.cpp quadrilateral.h rectangle.cpp rectangle.h rhombus.cpp rhombus.h right_triangle.cpp right_triangle.h square.cpp square.h triangle.cpp triangle.h)